--- a/Week-07-NLP/Lecture-NLP.ipynb
+++ b/Week-07-NLP/Lecture-NLP.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -24,13 +24,13 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/zacharydesario/nltk_data...\n",
+      "[nltk_data]     C:\\Users\\zbbxh\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/zacharydesario/nltk_data...\n",
+      "[nltk_data]     C:\\Users\\zbbxh\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     /Users/zacharydesario/nltk_data...\n",
+      "[nltk_data]     C:\\Users\\zbbxh\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
@@ -444,36 +444,47 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i play and start play with player and we all love to play with play'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# # Break words into their stem words\n",
     "\n",
-    "# def stem_words(a_string):\n",
-    "#     # Initalize our Stemmer\n",
-    "#     porter = PorterStemmer()\n",
+    "def stem_words(a_string):\n",
+    "     # Initalize our Stemmer\n",
+    "    porter = PorterStemmer()\n",
     "    \n",
-    "#     # Break the sentence down into a list of words\n",
-    "#     words = word_tokenize(a_string)\n",
+    "     # Break the sentence down into a list of words\n",
+    "    words = word_tokenize(a_string)\n",
     "    \n",
-    "#     # Make a list to append valid words into\n",
-    "#     valid_words = []\n",
+    "     # Make a list to append valid words into\n",
+    "    valid_words = []\n",
     "\n",
-    "#     # Loop through all the words\n",
-    "#     for word in words:\n",
-    "#         # Stem the word\n",
-    "#         stemmed_word = porter.stem(word)\n",
+    "     # Loop through all the words\n",
+    "    for word in words:\n",
+    "         # Stem the word\n",
+    "        stemmed_word = porter.stem(word)\n",
     "        \n",
-    "#         # Append stemmed word to our valid_words\n",
-    "#         valid_words.append(stemmed_word)\n",
+    "         # Append stemmed word to our valid_words\n",
+    "        valid_words.append(stemmed_word)\n",
     "        \n",
-    "#     # Join the list of words together into a string\n",
-    "#     a_string = ' '.join(valid_words)\n",
+    "    # Join the list of words together into a string\n",
+    "    a_string = ' '.join(valid_words)\n",
     "\n",
-    "#     return a_string \n",
+    "    return a_string \n",
     "\n",
     "\n",
-    "# a_sentence = 'I played and started playing with players and we all love to play with plays'\n",
-    "# stem_words(a_sentence)"
+    "a_sentence = 'I played and started playing with players and we all love to play with plays'\n",
+    "stem_words(a_sentence)"
    ]
   },
   {
@@ -703,9 +714,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Define our `X` and `y` data. \u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmessage_clean\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues\n\u001b[0;32m      5\u001b[0m y \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtopic_category\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Define our `X` and `y` data. \n",
     "\n",
@@ -38610,7 +38633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
